kubernetes/manifests/generated/production/argocd-controller/1-manifest/service-argocd-argocd-redis-master.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"labels":{"app.kubernetes.io/component":"master","app.kubernetes.io/instance":"argocd","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"redis","helm.sh/chart":"redis-15.4.0"},"name":"argocd-redis-master","namespace":"argocd"},"spec":{"ports":[{"name":"tcp-redis","port":6379,"targetPort":"redis"}],"selector":{"app.kubernetes.io/component":"master","app.kubernetes.io/instance":"argocd","app.kubernetes.io/name":"redis"},"type":" [...]
  labels:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: redis
    helm.sh/chart: redis-15.4.0
  name: argocd-redis-master
  namespace: argocd
spec:
  ports:
  - name: tcp-redis
    port: 6379
    targetPort: redis
  selector:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: redis
  type: ClusterIP
